...
    "Calendar.searchLabel" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Search"
          }
        }
      }
    },
    "ContextMenu.deleteLabel" : {
      "extractionState" : "manual",
...
    "Dashboard.title" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Today"
          }
        }
      }
    },
    "DataService.containerFailureMessage" : {
      "extractionState" : "manual",
...
    "Icons.add" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "plus.app.fill"
          }
        }
      }
    },
    "Icons.back" : {
      "extractionState" : "manual",
...
    "Icons.calendar" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "calendar"
          }
        }
      }
    },
    "Icons.check" : {
      "extractionState" : "manual",
...
    "Icons.contextCheck" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "checkmark.circle"
          }
        }
      }
    },
    "Icons.delete" : {
      "extractionState" : "manual",
...
    "Icons.edit" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "pencil"
          }
        }
      }
    },
    "Icons.filter" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "line.3.horizontal.decrease.circle"
          }
        }
      }
    },
    "Icons.forward" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "chevron.right"
          }
        }
      }
    },
    "Icons.list" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "list.bullet.below.rectangle"
          }
        }
      }
    },
    "Icons.more" : {
      "extractionState" : "manual",
...
    "Icons.search" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "magnifyingglass"
          }
        }
      }
    },
    "Icons.settings" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "gear"
          }
        }
      }
    },
    "Icons.up" : {
      "extractionState" : "manual",
...
    "RepeatBehaviorPicker.backButtonLabel" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Back"
          }
        }
      }
    },
    "RepeatBehaviorPicker.customRepeatLabel" : {
      "extractionState" : "manual",
...
    "Settings.categoriesLabel" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Categories"
          }
        }
      }
    },
    "Settings.categoryPlaceholder" : {
      "extractionState" : "manual",
...
    "Settings.title" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Settings"
          }
        }
      }
    },
    "Task.categoryLabel" : {
      "extractionState" : "manual",
...
    "Task.createButtonLabel" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Create task"
          }
        }
      }
    },
    "Task.currentColumnLabel" : {
      "extractionState" : "manual",
...
    "Task.saveButton" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Save"
          }
        }
      }
    },
    "Task.startingColumnLabel" : {
      "extractionState" : "manual",
...
    "Task.stepLabel" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Step"
          }
        }
      }
    },
    "Task.stepsLabel" : {
      "extractionState" : "manual",
...
    "Task.titleLabel" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Title"
          }
        }
      }
    },
    "TaskItem.priority" : {
      "extractionState" : "manual",
...
