...
            .padding(.horizontal, .padding4)
            .id(name)
    }
}

#Preview {
    TaskWidgetHeader(name: "TODO")
}

